--- a/.github/workflows/build-for-shopify.yaml
+++ b/.github/workflows/build-for-shopify.yaml
@@ -19,13 +19,13 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: latest
+          node-version: 18
 
       - uses: pnpm/action-setup@v2
         name: Install pnpm
         id: pnpm-install
         with:
-          version: latest
+          version: 7
           run_install: false
 
       - name: Get pnpm store directory
@@ -49,7 +49,7 @@ jobs:
       - name: Extract branch name
         id: extract_branch
         shell: bash
-        run: echo "branch=${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
 
       - name: Add -build subtree
         run: |
@@ -60,7 +60,7 @@ jobs:
           git config user.email "action@github.com"
           git add .
           git commit --amend --no-edit
-          git add -f assets/cap-*
+          git add -f assets/test-*
           git add -f snippets/adastra.liquid
           git commit -m "Shopify git-busting commit: `date`"
       - name: Push changes to development-build subtree
