--- a/.github/workflows/build-for-shopify.yaml
+++ b/.github/workflows/build-for-shopify.yaml
@@ -60,7 +60,7 @@ jobs:
           git config user.email "action@github.com"
           git add .
           git commit --amend --no-edit
-          git add -f assets/test-*
+          git add -f assets/herbdoc-*
           git add -f snippets/adastra.liquid
           git commit -m "Shopify git-busting commit: `date`"
       - name: Push changes to development-build subtree
